--- a/animal.html
+++ b/animal.html
@@ -4,7 +4,10 @@
         <title>Животные</title>
         <link rel="stylesheet" href="animal.css">
     </head>
-                              <h1>милые животные</h1>
+ <header>            
+            <a href="index.html"><b>Назад, на главную</b></a>
+        </header>
+  <h1>милые животные</h1>
                                   <h2>котики</h2>
          <img src="https://icdn.lenta.ru/images/2019/12/06/20/20191206201357319/square_320_19a7db2c837d904f053a9448ffcfb750.png">
        <img src="https://sun9-73.userapi.com/s/v1/if1/14elKBUrx5jA5rXYwwLgtHYZNuskD2xIMBpkyPUS_mnY4oArSA5x4ief1mHQCbSGMCoiJuto.jpg?size=200x200&quality=96&crop=0,0,960,960&ava=1">
