--- a/capib.html
+++ b/capib.html
@@ -1,4 +1,7 @@
 <html>
+      <header>
+            <a href="index.html"><b>Назад, на главную</b></a>
+        </header>
     <title>капибара</title>
     <body style="background:#3BA3D0; font-family:sans-serif">
     <h1 style="text-align:center">капибара кто она</h1>
